// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileAttachmentList should match snapshot with a single image file 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "width": undefined,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image01.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 171,
              "id": "fileId",
              "mime_type": "image/png",
              "name": "image01.png",
              "post_id": "postId",
              "size": 14894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 425,
            },
          }
        }
        id="fileId"
        index={0}
        isSingleImage={true}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
  </View>
</View>
`;

exports[`FileAttachmentList should match snapshot with combination of image and non-image attachments 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "width": undefined,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image01.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 171,
              "id": "fileId",
              "mime_type": "image/png",
              "name": "image01.png",
              "post_id": "postId",
              "size": 14894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 425,
            },
          }
        }
        id="fileId"
        index={0}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image02.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "otherFileId",
              "mime_type": "image/png",
              "name": "image02.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="otherFileId"
        index={1}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <FileAttachment
      canDownloadFiles={true}
      file={
        Object {
          "caption": "file01.other",
          "data": Object {
            "extension": "other",
            "id": "fileId",
            "mime_type": "other/type",
            "name": "file01.other",
            "post_id": "postId",
            "size": 14894,
            "user_id": "userId",
          },
        }
      }
      id="fileId"
      index={0}
      isSingleImage={false}
      onCaptureRef={[Function]}
      onPreviewPress={[Function]}
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      wrapperWidth={680}
    />
  </View>
</View>
`;

exports[`FileAttachmentList should match snapshot with four image files 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "width": undefined,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image01.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 171,
              "id": "fileId",
              "mime_type": "image/png",
              "name": "image01.png",
              "post_id": "postId",
              "size": 14894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 425,
            },
          }
        }
        id="fileId"
        index={0}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image02.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "otherFileId",
              "mime_type": "image/png",
              "name": "image02.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="otherFileId"
        index={1}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image03.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "thirdFileId",
              "mime_type": "image/png",
              "name": "image03.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="thirdFileId"
        index={2}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image04.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "fourthFileId",
              "mime_type": "image/png",
              "name": "image04.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="fourthFileId"
        index={3}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
  </View>
</View>
`;

exports[`FileAttachmentList should match snapshot with more than four image files 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "width": undefined,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image01.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 171,
              "id": "fileId",
              "mime_type": "image/png",
              "name": "image01.png",
              "post_id": "postId",
              "size": 14894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 425,
            },
          }
        }
        id="fileId"
        index={0}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image02.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "otherFileId",
              "mime_type": "image/png",
              "name": "image02.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="otherFileId"
        index={1}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image03.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "thirdFileId",
              "mime_type": "image/png",
              "name": "image03.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="thirdFileId"
        index={2}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image04.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "fourthFileId",
              "mime_type": "image/png",
              "name": "image04.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="fourthFileId"
        index={3}
        isSingleImage={false}
        nonVisibleImagesCount={2}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
  </View>
</View>
`;

exports[`FileAttachmentList should match snapshot with non-image attachment 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <FileAttachment
      canDownloadFiles={true}
      file={
        Object {
          "caption": "file01.other",
          "data": Object {
            "extension": "other",
            "id": "fileId",
            "mime_type": "other/type",
            "name": "file01.other",
            "post_id": "postId",
            "size": 14894,
            "user_id": "userId",
          },
        }
      }
      id="fileId"
      index={0}
      isSingleImage={false}
      onCaptureRef={[Function]}
      onPreviewPress={[Function]}
      theme={
        Object {
          "awayIndicator": "#ffbc42",
          "buttonBg": "#166de0",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3d3c40",
          "codeTheme": "github",
          "dndIndicator": "#f74343",
          "errorTextColor": "#fd5960",
          "linkColor": "#2389d7",
          "mentionBg": "#ffffff",
          "mentionBj": "#ffffff",
          "mentionColor": "#145dbf",
          "mentionHighlightBg": "#ffe577",
          "mentionHighlightLink": "#166de0",
          "newMessageSeparator": "#ff8800",
          "onlineIndicator": "#06d6a0",
          "sidebarBg": "#145dbf",
          "sidebarHeaderBg": "#1153ab",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#579eff",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#4578bf",
          "sidebarUnreadText": "#ffffff",
          "type": "Mattermost",
        }
      }
      wrapperWidth={680}
    />
  </View>
</View>
`;

exports[`FileAttachmentList should match snapshot with three image files 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "width": undefined,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image01.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 171,
              "id": "fileId",
              "mime_type": "image/png",
              "name": "image01.png",
              "post_id": "postId",
              "size": 14894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 425,
            },
          }
        }
        id="fileId"
        index={0}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image02.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "otherFileId",
              "mime_type": "image/png",
              "name": "image02.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="otherFileId"
        index={1}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image03.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "thirdFileId",
              "mime_type": "image/png",
              "name": "image03.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="thirdFileId"
        index={2}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
  </View>
</View>
`;

exports[`FileAttachmentList should match snapshot with two image files 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 5,
        },
        Object {
          "width": undefined,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image01.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 171,
              "id": "fileId",
              "mime_type": "image/png",
              "name": "image01.png",
              "post_id": "postId",
              "size": 14894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 425,
            },
          }
        }
        id="fileId"
        index={0}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <FileAttachment
        canDownloadFiles={true}
        file={
          Object {
            "caption": "image02.png",
            "data": Object {
              "create_at": 1546893090093,
              "delete_at": 0,
              "extension": "png",
              "has_preview_image": true,
              "height": 800,
              "id": "otherFileId",
              "mime_type": "image/png",
              "name": "image02.png",
              "post_id": "postId",
              "size": 24894,
              "update_at": 1546893090093,
              "user_id": "userId",
              "width": 555,
            },
          }
        }
        id="otherFileId"
        index={1}
        isSingleImage={false}
        onCaptureRef={[Function]}
        onPreviewPress={[Function]}
        theme={
          Object {
            "awayIndicator": "#ffbc42",
            "buttonBg": "#166de0",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3d3c40",
            "codeTheme": "github",
            "dndIndicator": "#f74343",
            "errorTextColor": "#fd5960",
            "linkColor": "#2389d7",
            "mentionBg": "#ffffff",
            "mentionBj": "#ffffff",
            "mentionColor": "#145dbf",
            "mentionHighlightBg": "#ffe577",
            "mentionHighlightLink": "#166de0",
            "newMessageSeparator": "#ff8800",
            "onlineIndicator": "#06d6a0",
            "sidebarBg": "#145dbf",
            "sidebarHeaderBg": "#1153ab",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#579eff",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#4578bf",
            "sidebarUnreadText": "#ffffff",
            "type": "Mattermost",
          }
        }
        wrapperWidth={680}
      />
    </View>
  </View>
</View>
`;
